--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
+    "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
+    "react-router-dom": "^5.2.0",
+    "react-router-hook": "^0.7.1",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
+    "react-toastify": "^7.0.4",
+    "react-typical": "^0.1.3",
+    "swiper": "^6.7.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
